--- a/tsconfig.json
+++ b/tsconfig.json
@@ -67,7 +67,10 @@
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
   },
   "include": 
-    ["src/**/*.ts"]
+    [
+      "src/**/*.ts",
+      "**/*.config.js"
+    ]
   ,
   "exclude": [
     "node_modules"
