--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,15 @@
 logs
 *.log
 npm-debug.log*
-# Docs
-docs
-doc
+
 # Dependencies
 node_modules
 
 # Coverage
 coverage
+
+# debug
+src/debug*.ts
 
 # Transpiled files
 build
