--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
     "ts-jest": "^26.4.1",
     "tsutils": "^3.17.1",
     "typedoc": "^0.19.2",
-    "typescript": "^4.0.3"
-  },
-  "dependencies": {
+    "typescript": "^4.0.3",
     "fs": "0.0.1-security",
     "path": "^0.12.7"
+  },
+  "dependencies": {
   }
 }
