--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "war3map",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "To translate between `war3map` and `json` formats for WarCraft III .w3x maps.",
   "main": "dist/src/index.js",
-  "homepage":"https://invokerrrr.github.io/war3map/",
+  "homepage": "https://invokerrrr.github.io/war3map/",
   "repository": {
     "type": "git",
     "url": "https://github.com/invokerrrr/war3map.git"
@@ -14,7 +14,8 @@
     "test:coverage": "jest --coverage",
     "build": "tsc -p tsconfig.json",
     "lint": "eslint . --ext .ts",
-    "doc": "typedoc --disableOutputCheck"
+    "doc": "typedoc --disableOutputCheck",
+    "prepublish": "npm run build"
   },
   "files": [
     "src/**/*",
@@ -28,32 +29,36 @@
     "war3map",
     "w3x"
   ],
-  "author":{ 
+  "author": {
     "name": "Invoker Bot",
     "email": "594404963@qq.com",
     "url": "https://github.com/invokerrrr"
   },
+  "publisher": "invoker-godder",
   "bugs": {
     "url": "https://github.com/invokerrrr/war3map/issues"
   },
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.5",
+    "@types/typescript": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-jest": "^24.1.0",
+    "fs": "0.0.1-security",
     "jest": "^26.5.2",
+    "path": "^0.12.7",
     "prettier": "^2.1.2",
     "ts-jest": "^26.4.1",
     "tsutils": "^3.17.1",
     "typedoc": "^0.19.2",
-    "typescript": "^4.0.3",
-    "fs": "0.0.1-security",
-    "path": "^0.12.7"
+    "typescript": "^4.0.3"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
