--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build": "tsc -p tsconfig.json",
     "lint": "eslint . --ext .ts",
     "doc": "typedoc --disableOutputCheck",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "coveralls":"jest --coverage && coveralls < coverage/lcov.info "
   },
   "files": [
     "src/**/*",
@@ -48,6 +49,7 @@
     "@types/typescript": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
+    "coveralls": "^3.1.0",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-jest": "^24.1.0",
